[project]
name = "saju-card"
version = "0.2.0"
description = "Codex/Claude skill and CLI for generating one vertical Korean saju info card image."
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
  "lunar-python>=1.4.8",
  "pillow>=10.0.0",
]

[project.scripts]
saju-card = "saju_skill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saju_skill"]
